Fix packages/react close modal width issue on small screens

--- a/packages/react/src/components/style.scss
+++ b/packages/react/src/components/style.scss
@@ -156,7 +156,6 @@
   tab-size: 4;
   text-align: left;
   background: #fff;
-  min-width: 500px;
   max-width: 500px;
 }
 .flatfile_close-confirm-modal-inner {
